# apijet

./: .flake8  .gitignore  LICENSE  README.md  build.sh  check_installation.sh  e2etest.sh  evaluate.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: apijet.yml  test.yml
apijet/: create.py  main.py  version.py
apijet/commands/: create.py  endpoint.py  remove.py
apijet/templates/: app.template.py  core.template.py  core_db.template.py  database.template.py  dbmanager.template.py  message.template.py  message_db.template.py  model.template.py  model_db.template.py  project.template.py  router.template.py  router_db.template.py
apijet/utils/: opfile.py
output/: apiJet-0.1.2-py3-none-any.whl
output/0.1.2/flake8/: index.html
output/0.1.2/pytest/: test-report.html
output/0.2.0/: apiJet-0.2.0-py3-none-any.whl
output/0.2.0/flake8/: index.html
output/0.2.0/pytest/: test-report.html
output/flake8/: index.html
output/pytest/: test-report.html
tests/: test_create.py  test_endpoint.py  test_project.py  test_remove.py
