[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apijet"
dynamic = ["version"]
authors = [
  { name="Alfonso Farruggia", email="alfarruggia@gmail.com" },
]
description = "A command line tool to deploy python Rest APIS in 20 secs."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.85.0",
    "gunicorn==20.1.0",
    "pydantic==1.10.2",
    "pymongo==4.2.0",
    "starlette==0.20.4",
    "uvicorn==0.18.3"
]

[project.urls]
"Homepage" = "https://github.com/Arfius/apijet/"
"Bug Tracker" = "https://github.com/Arfius/apijet/issues"

[project.scripts]
apijet = "apijet.main:main"

[tool.hatch.version]
path = "apijet/version.py"


